Prevent news headlines from wrapping onto next line. refs #17470

--- a/src/hg/htdocs/style/jWest.css
+++ b/src/hg/htdocs/style/jWest.css
@@ -215,7 +215,7 @@ div.jwWarningBoxStatic {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 455px;
+    width: 425px;
 }
 
 .jwSmallText {
